src/runtime-rs/vendor/actix-macros/tests/trybuild/main-02-only-async.rs
#[actix_rt::main]
fn main() {
    futures_util::future::ready(()).await
}
